...
        android:layout_width="@dimen/icon_size_normal"
        android:layout_height="@dimen/icon_size_normal"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="@dimen/padding_margin_normal"
        android:src="@drawable/ic_baseline_history_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_view_query"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_query"
        android:layout_width="0dp"
...
