...
                android:background="@null"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_text_query"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                android:background="@android:color/transparent"
                android:hint="@string/hint_search_product"
                android:imeOptions="actionSearch"
                android:inputType="text"
...
